= Attempted vertical align, fixed tiling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,23 +1,16 @@
 .center
 {
-  /* Using flex-style alignment, set up for divs inside of this one.*/
-  display: -webkit-flex;
-  display:    -moz-flex;
-  display:         flex;
-  -webkit-align-items: center;
-     -moz-align-items: center;
-          align-items: center;
-  -webkit-justify-content: center;
-     -moz-justify-content: center;
-          justify-content: center;
+  vertical-align: middle;
 }
 
 .desc
 {
   font-family: sans-serif; 
+  font-size: 1.5em;
 }
 
 body {
+    line-height: 200px;
     background-image: url("media/bg.png");
-    background-repeat: repeat-y;
+    background-repeat: repeat;
 }
